syntax = "proto3";

package proto;

option go_package="./proto";

service PersonService {
  // 사용자 정보 저장 요청, Unary RPC
  rpc GetPersonInformation(GetPersonRequest) returns (GetPersonResponse) {}
  rpc SavePersonInformation(SavePersonRequest) returns (BasicMessageResponse) {}
}

message GetPersonRequest {
  string email = 1;
}

message GetPersonResponse {
  string name = 1;
  int64 age = 2;
  string email = 3;
  string message = 4;
}

message SavePersonRequest {
  string name = 1;
  int64 age = 2;
  string email = 3;
  string password = 4;
}

message BasicMessageResponse {
  string message = 1;
}